Tue Sep  9 14:05:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/diff-builds-and-group-fixed-tests-only.sh
          Change the sort to cater from revision numbers.

Tue Sep  9 13:39:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/diff-builds.pl
          typo vi / non-vi edit

Tue Sep  9 13:35:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/diff-builds.pl
          Adjust for revision numbers.

Tue Sep  9 11:36:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_time.cpp (strptime_emulation):
          Clear the struct tm before filling it. Without we get a random
          value back if the user doesn't use a full date.

Tue Sep  9 11:31:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/modules/VXTestProjectCreator.pm:
        * bin/MakeProjectCreator/templates/vxtest.mpd:
          Also generate a vxtest file for libraries

Thu Sep  4 14:39:33 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          '-P' isn't a valid option on Ubantu linux (Bug 15051). Replacing
          with Perl alternate.

Wed Sep  3 10:23:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Don't run OBV Typed events with micro and compact configurations

Wed Sep  3 07:31:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added support for ACE_RUN_VX_TGTSRV_WORKINGDIR. Before starting
          the executable we will do a chdir to this directory when it
          is specified

Wed Sep  3 07:10:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bound_Ptr_Test.cpp:
          Don't use ACE_ASSERT, it is disabled in release mode and this test
          had some real functionality placed within an ACE_ASSERT. This fixes
          bugzilla 3415
